test/fail/type-alias-path/m1.mo
module {
  public type MyType = { var x : Nat };
  public func m() : MyType = { var x = 0 };
};
